# rbmenu

./: Cargo.toml  README.md
res/: rbmenu.1
res/scripts/: rbmenu_clip  rbmenu_dmenu
src/: bookmark.rs  bookmark_query.rs  commands.rs  config.rs  data.rs  error.rs  lib.rs  main.rs  parser.rs
